Fri Nov 21 01:13:25 GMT 2003  Olly Betts <olly@survex.com>

	* include/xapian/termiterator.h,tests/api_nodb.cc: Added TermIterator
	  default ctor which had disappeared somehow.  Added regression test.

Thu Nov 20 03:19:37 GMT 2003  Olly Betts <olly@survex.com>

	* configure.in: Fixed test for fdatasync to work (I suspect a change
	  in a recent autoconf broke it as it relied on autoconf internal
	  naming).

Tue Nov 18 17:53:29 GMT 2003  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Tweaked workaround for FreeBSD make in VPATH
	  builds.

Tue Nov 18 17:53:01 GMT 2003  Olly Betts <olly@survex.com>

	* extra/queryparsertest.cc: Added another testcase.

Tue Nov 18 17:37:20 GMT 2003  Olly Betts <olly@survex.com>

	* docs/: Added first cut of documentation for Xapian::QueryParser
	  query syntax.
	* docs/scalability.html: Fixed typo.

Fri Oct 31 18:17:13 GMT 2003  Olly Betts <olly@survex.com>

	* extra/queryparser.yy,extra/queryparsertest.cc: Added support for
	  term prefixes on phrases and expressions (e.g. author:(twain OR poe)
	  subject:"space flight").

Tue Oct 28 15:03:01 GMT 2003  Olly Betts <olly@survex.com>

	* api/omenquire.cc: Added FIXME comment.

Tue Oct 28 15:01:14 GMT 2003  Olly Betts <olly@survex.com>

	* docs/todo.xml: Removed Java from list of language bindings we'd
	  like to support, as we should have up-to-date Java bindings soon.

Sun Oct 26 20:18:24 GMT 2003  Olly Betts <olly@survex.com>

	* bin/quartzcompact.cc: Fix the name that the meta file gets copied
	  to (was /path/to/dbdirmeta rather than /path/to/dbdir/meta).

Tue Oct 21 22:26:51 BST 2003  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Backed out previous change - the original rule
	  does work, but the build machine had a generated file which stopped
	  the symlink being generated.

Tue Oct 21 22:14:22 BST 2003  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Tweaked rule to symlink queryparser.cc.

Tue Oct 21 17:31:10 BST 2003  Olly Betts <olly@survex.com>
