@@ -18,7 +18,7 @@ HTMLDOCS = index.html install.html intro_ir.html overview.html \
 # Files which should be put in the distribution by automake
 EXTRA_DIST = mkdoc.pl \
 	doxygen_api_conf.in doxygen_full_conf.in \
-       	$(HTMLDOCS) \
+	$(HTMLDOCS) \
 	doxygen_api_header.html_tmpl \
 	doxygen_api_footer.html_tmpl \
 	doxygen_full_header.html_tmpl \
@@ -75,19 +75,10 @@ doxygen_docs: doxygen_source_docs doxygen_api_docs
 doxygen_api_conf: $(top_srcdir)/configure.in
 doxygen_full_conf: $(top_srcdir)/configure.in
 
-# BSD make won't VPATH except for implicit rules it seems, so we check for
-# the situation where this matters and then use find -newer to check the
-# dependencies ourselves!
-
+if MAINTAINER_MODE
 # depend on configure.in so we rebuild if VERSION changes
 code_structure.html: mkdoc.pl $(top_srcdir)/configure.in
-	if test -f "$(srcdir)/code_structure.html" && \
-	   test ! -f code_structure.html && \
-	   test -z "`find $(srcdir)/mkdoc.pl $(top_srcdir)/configure.in -newer $(srcdir)/code_structure.html -print`" ; then \
-	    echo Not rebuilding code_structure.html despite make with crude VPATH ;\
-	else \
-	    $(PERL) $(srcdir)/mkdoc.pl "$(VERSION)" $(top_srcdir) $@ ;\
-	fi
+	$(PERL) $(srcdir)/mkdoc.pl "$(VERSION)" $(top_srcdir) $@
 
 # We run into problems with line length limits in older sed implementations
 # (e.g. on Solaris) so use $T instead of $(top_srcdir) in APIDOC_SRC, etc
@@ -98,24 +89,11 @@ apidoc/html/index.html: $(top_srcdir)/configure.in \
 		$(srcdir)/doxygen_api_footer.html_tmpl \
 		$(srcdir)/doxygen_api_conf.in \
 		$(APIDOC_SRC)
-	if test -f "$(srcdir)/apidoc/html/index.html" && \
-	   test ! -f "apidoc/html/index.html" && \
-	   test -z "`find $(top_srcdir)/configure.in $(srcdir)/doxygen_api_header.html_tmpl $(srcdir)/doxygen_api_footer.html_tmpl $(srcdir)/doxygen_api_conf.in $(APIDOC_SRC) -newer $(srcdir)/apidoc/html/index.html -print`" ; then \
-	    echo Not rebuilding apidoc/html/index.html despite make with crude VPATH ;\
-	else \
-	    rm -rf apidoc ;\
-	    top_srcdir=$(top_srcdir) $(DOXYGEN) doxygen_api_conf ;\
-	fi
+	rm -rf apidoc
+	top_srcdir=$(top_srcdir) $(DOXYGEN) doxygen_api_conf
 
 apidoc.ps: apidoc/html/index.html
-	if test -f "$(srcdir)/apidoc/html/index.html" && \
-	   test ! -f "apidoc/html/index.html" && \
-	   test -f "$(srcdir)/apidoc.ps" && test ! -f apidoc.ps && \
-	   test -z "`find $(srcdir)/apidoc/html/index.html -newer $(srcdir)/apidoc.ps -print`" ; then \
-	    echo Not rebuilding apidoc.ps despite make with crude VPATH ;\
-	else \
-	    cd apidoc/latex && make refman.ps && mv refman.ps ../../apidoc.ps ;\
-	fi
+	cd apidoc/latex && make refman.ps && mv refman.ps ../../apidoc.ps
 
 sourcedoc/html/index.html: $(top_srcdir)/configure.in \
 		$(srcdir)/doxygen_full_header.html_tmpl \
@@ -123,24 +101,12 @@ sourcedoc/html/index.html: $(top_srcdir)/configure.in \
 		$(srcdir)/doxygen_full_conf.in \
 		$(SOURCEDOC_CC_SRC) $(SOURCEDOC_C_SRC) $(SOURCEDOC_H_SRC) \
 		$(APIDOC_SRC)
-	if test -f "$(srcdir)/sourcedoc/html/index.html" && \
-	   test ! -f "sourcedoc/html/index.html" && \
-	   test -z "`find $(top_srcdir)/configure.in $(srcdir)/doxygen_full_header.html_tmpl $(srcdir)/doxygen_full_footer.html_tmpl $(srcdir)/doxygen_full_conf.in $(SOURCEDOC_CC_SRC) $(SOURCEDOC_C_SRC) $(SOURCEDOC_H_SRC) $(APIDOC_SRC) -newer $(srcdir)/sourcedoc/html/index.html -print`" ; then \
-	    echo Not rebuilding sourcedoc/html/index.html despite make with crude VPATH ;\
-	else \
-	    rm -rf sourcedoc ;\
-	    top_srcdir=$(top_srcdir) $(DOXYGEN) doxygen_full_conf ;\
-	fi
+	rm -rf sourcedoc
+	top_srcdir=$(top_srcdir) $(DOXYGEN) doxygen_full_conf
 
 sourcedoc.ps: sourcedoc/html/index.html
-	if test -f "$(srcdir)/sourcedoc/html/index.html" && \
-	   test ! -f "sourcedoc/html/index.html" && \
-	   test -f "$(srcdir)/sourcedoc.ps" && test ! -f sourcedoc.ps && \
-	   test -z "`find $(srcdir)/sourcedoc/html/index.html -newer $(srcdir)/sourcedoc.ps -print`" ; then \
-	    echo Not rebuilding sourcedoc.ps despite make with crude VPATH ;\
-	else \
-	    cd sourcedoc/latex && make refman.ps && mv refman.ps ../../sourcedoc.ps ;\
-	fi
+	cd sourcedoc/latex && make refman.ps && mv refman.ps ../../sourcedoc.ps
+endif
 
 # We used to do: $(LATEX) "\scrollmode\input" refman.tex
 # doxygen does: latex refman.tex
