@@ -14,23 +14,27 @@ lib_LTLIBRARIES = libxapianqueryparser.la libomqueryparser.la
 check_PROGRAMS = queryparsertest
 TESTS = queryparsertest$(EXEEXT)
 
+EXTRA_DIST = queryparser.yy
+
+# In non-maintainer-mode, depend on the generated C++ source
+if MAINTAINER_MODE
+YYSOURCES = queryparser.yy
+else
+YYSOURCES = queryparser.cc
+endif
+
 # 0:0:0 0.7.2 (and anything before) 
 # 0:1:0 0.7.3 and 0.7.4
 libxapianqueryparser_la_LDFLAGS = -version-info 0:1:0
 
-libxapianqueryparser_la_SOURCES = queryparser.yy
+libxapianqueryparser_la_SOURCES = $(YYSOURCES)
 
 # For backward compatibility
 # 0:0:0 0.7.3 (and anything before) 
 # 0:1:0 0.7.4
 libomqueryparser_la_LDFLAGS = -version-info 0:1:0
 
-libomqueryparser_la_SOURCES = queryparser.yy
-
-# FreeBSD's make insists on regenerating queryparser.cc for VPATH builds
-# this stops that
-queryparser.cc: $(srcdir)/queryparser.cc
-	cp $(srcdir)/queryparser.cc .
+libomqueryparser_la_SOURCES = $(YYSOURCES)
 
 queryparsertest_SOURCES = queryparsertest.cc
 queryparsertest_LDADD = libomqueryparser.la ../libxapian.la
